--- a/modulo2/desafios/d010.b/index.html
+++ b/modulo2/desafios/d010.b/index.html
@@ -79,7 +79,7 @@
                 <p>Acesse aqui o site <a href="https://www.oficinadanet.com.br/post/13939-a-historia-do-android" target="_blank" class="externo">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
             </aside>
             
-            <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
+            <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong> e seu simpático mascote.</p>
         </article>
     </main>
     <footer>
