--- a/modulo3/ex022/fundo006.html
+++ b/modulo3/ex022/fundo006.html
@@ -7,7 +7,7 @@
     <title>Fundo fixo de tela</title>
     <style>
         body {
-            height: 100vh;
+            max-height: 100vh;
             /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
@@ -41,5 +41,6 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis quae consequatur voluptatem enim quod cupiditate tenetur esse, at corporis nulla quidem rem necessitatibus facilis blanditiis, eius in cumque, voluptate veniam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi perspiciatis ducimus enim qui, facere tempora at nemo hic? Ut hic molestiae, ab exercitationem illo eveniet praesentium! Rerum debitis earum itaque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis labore cupiditate vitae ut id porro numquam atque eaque. Vero sapiente hic alias et itaque nam molestias deserunt odit fuga facere.</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis quae consequatur voluptatem enim quod cupiditate tenetur esse, at corporis nulla quidem rem necessitatibus facilis blanditiis, eius in cumque, voluptate veniam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi perspiciatis ducimus enim qui, facere tempora at nemo hic? Ut hic molestiae, ab exercitationem illo eveniet praesentium! Rerum debitis earum itaque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis labore cupiditate vitae ut id porro numquam atque eaque. Vero sapiente hic alias et itaque nam molestias deserunt odit fuga facere.</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis quae consequatur voluptatem enim quod cupiditate tenetur esse, at corporis nulla quidem rem necessitatibus facilis blanditiis, eius in cumque, voluptate veniam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi perspiciatis ducimus enim qui, facere tempora at nemo hic? Ut hic molestiae, ab exercitationem illo eveniet praesentium! Rerum debitis earum itaque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis labore cupiditate vitae ut id porro numquam atque eaque. Vero sapiente hic alias et itaque nam molestias deserunt odit fuga facere.</p>
+    </main>
 </body>
 </html>
