--- a/modulo3/desafios/d011/index.html
+++ b/modulo3/desafios/d011/index.html
@@ -13,10 +13,8 @@
 
         div {
             height: 96vh;
-            background-image: url(imagens/astronauta.png);
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: 300px 300px;
+            background: url(imagens/astronauta.png) center center no-repeat;
+            background-size: 400px 400px;
         }
     </style>
 </head>
