--- a/modulo3/desafios/d012/index.html
+++ b/modulo3/desafios/d012/index.html
@@ -23,7 +23,7 @@
             Vou dizer tudo em poesia.
         </p>
     </section>
-    <section class="imagem">
+    <section class="imagem" id="foto001">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -42,8 +42,9 @@
             Ou vai até no começo <br>
             Agora é .com <br>
             Se o saite é muito bom <br>
-            Ele vale um alto preço.
+            Ele vale um alto preço. 
         </p>
+        <br>
         <p>
             Pra piorar a liguagem <br>
             O emoticom é um risco <br>
@@ -51,10 +52,10 @@
             Ponto e vírgula e um asterisco <br>
             Um beijo significa <br>
             Pra entender como fica <br>
-            Decifre esse rabisco.
+            Decifre esse rabisco. 
         </p>
     </section>
-    <section class="imagem">
+    <section class="imagem" id="foto002">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -75,6 +76,7 @@
             O mundo ficou cativo <br>
             Da tecnologia do agora.
         </p>
+        <br>
         <p>
             Felizmente, pra orar <br>
             Não precisa de internet <br>
