--- a/modulo3/ex023/tabela002.html
+++ b/modulo3/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table {
             width: 500px; /* 450px para a coluna 'Estado' e 50px para 'População '*/
             border-collapse: collapse;
+            position: relative;
         }
         
         td, th {
@@ -30,6 +31,11 @@
         thead, tfoot {
             background-color: grey;
             color: white;
+        }
+
+        thead {
+            position: sticky;
+            top: -1px;
         }
 
         tbody > tr:nth-child(2n) { /* '2n' significa de duas em duas linhas. Pode se usar também 'odd = ímpar' e 'even = par'. Também pode usar 2n-1 e assim por diante */
@@ -184,5 +190,11 @@
             </tr>
         </tbody>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam nobis itaque iste deleniti alias! Qui quam mollitia illum, et quidem reiciendis tempora quasi saepe nobis non modi ipsum harum quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus deserunt facere doloremque reprehenderit quod. Culpa non optio delectus porro, dolorum fugiat omnis laborum tempore earum nostrum vero voluptates est cum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae ipsum reprehenderit at aut, perspiciatis delectus pariatur facilis molestiae officia magnam nihil sit. Neque cum quo dolorum blanditiis culpa, veniam atque? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum doloribus ipsa explicabo repudiandae reiciendis doloremque sit, corporis laboriosam, quis saepe quo? Impedit dignissimos numquam in inventore! Unde consectetur odio cupiditate.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam nobis itaque iste deleniti alias! Qui quam mollitia illum, et quidem reiciendis tempora quasi saepe nobis non modi ipsum harum quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus deserunt facere doloremque reprehenderit quod. Culpa non optio delectus porro, dolorum fugiat omnis laborum tempore earum nostrum vero voluptates est cum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae ipsum reprehenderit at aut, perspiciatis delectus pariatur facilis molestiae officia magnam nihil sit. Neque cum quo dolorum blanditiis culpa, veniam atque? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum doloribus ipsa explicabo repudiandae reiciendis doloremque sit, corporis laboriosam, quis saepe quo? Impedit dignissimos numquam in inventore! Unde consectetur odio cupiditate.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam nobis itaque iste deleniti alias! Qui quam mollitia illum, et quidem reiciendis tempora quasi saepe nobis non modi ipsum harum quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus deserunt facere doloremque reprehenderit quod. Culpa non optio delectus porro, dolorum fugiat omnis laborum tempore earum nostrum vero voluptates est cum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae ipsum reprehenderit at aut, perspiciatis delectus pariatur facilis molestiae officia magnam nihil sit. Neque cum quo dolorum blanditiis culpa, veniam atque? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum doloribus ipsa explicabo repudiandae reiciendis doloremque sit, corporis laboriosam, quis saepe quo? Impedit dignissimos numquam in inventore! Unde consectetur odio cupiditate.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam nobis itaque iste deleniti alias! Qui quam mollitia illum, et quidem reiciendis tempora quasi saepe nobis non modi ipsum harum quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus deserunt facere doloremque reprehenderit quod. Culpa non optio delectus porro, dolorum fugiat omnis laborum tempore earum nostrum vero voluptates est cum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae ipsum reprehenderit at aut, perspiciatis delectus pariatur facilis molestiae officia magnam nihil sit. Neque cum quo dolorum blanditiis culpa, veniam atque? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum doloribus ipsa explicabo repudiandae reiciendis doloremque sit, corporis laboriosam, quis saepe quo? Impedit dignissimos numquam in inventore! Unde consectetur odio cupiditate.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam nobis itaque iste deleniti alias! Qui quam mollitia illum, et quidem reiciendis tempora quasi saepe nobis non modi ipsum harum quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus deserunt facere doloremque reprehenderit quod. Culpa non optio delectus porro, dolorum fugiat omnis laborum tempore earum nostrum vero voluptates est cum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae ipsum reprehenderit at aut, perspiciatis delectus pariatur facilis molestiae officia magnam nihil sit. Neque cum quo dolorum blanditiis culpa, veniam atque? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum doloribus ipsa explicabo repudiandae reiciendis doloremque sit, corporis laboriosam, quis saepe quo? Impedit dignissimos numquam in inventore! Unde consectetur odio cupiditate.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam nobis itaque iste deleniti alias! Qui quam mollitia illum, et quidem reiciendis tempora quasi saepe nobis non modi ipsum harum quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus deserunt facere doloremque reprehenderit quod. Culpa non optio delectus porro, dolorum fugiat omnis laborum tempore earum nostrum vero voluptates est cum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae ipsum reprehenderit at aut, perspiciatis delectus pariatur facilis molestiae officia magnam nihil sit. Neque cum quo dolorum blanditiis culpa, veniam atque? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum doloribus ipsa explicabo repudiandae reiciendis doloremque sit, corporis laboriosam, quis saepe quo? Impedit dignissimos numquam in inventore! Unde consectetur odio cupiditate.</p>
 </body>
 </html>
