--- a/modulo3/ex023/tabela002.html
+++ b/modulo3/ex023/tabela002.html
@@ -69,7 +69,7 @@
         <thead>
             <tr>
                 <th scope="col">Estado</th> <!-- 'col' é usado para marcar colunas, onde os dados vem abaixo -->
-                <!-- O 'scope' é usado pelos indexadores (parsers) para buscar os dados de uma tabela de forma coerente. Não há nenhum alteração visual -->
+                <!-- O 'scope' é usado pelos indexadores (parsers) para buscar os dados de uma tabela de forma coerente. Não há nenhum alteração visual. É apenas usado em th's -->
                 <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
