--- a/modulo3/ex022/fundo007.html
+++ b/modulo3/ex022/fundo007.html
@@ -27,7 +27,7 @@
             top: 50%;
             left: 50%;
 
-            transform: translate(-50%, -50%); /* 'translation' move o componente de acordo com os parâmetros especificados*/
+            transform: translate(-50%, -50%); /* 'translate' move o componente de acordo com os parâmetros especificados*/
         }
     </style>
 </head>
