--- a/modulo3/ex024/iframe002.html
+++ b/modulo3/ex024/iframe002.html
@@ -21,7 +21,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis adipisci labore dolorem natus nesciunt enim repellendus, maiores tenetur, voluptas eius, aliquam numquam nulla dolore consequatur accusantium? Eum rem porro possimus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem necessitatibus, soluta quae animi quaerat perferendis id modi deleniti reiciendis recusandae eaque labore, officiis aliquam ullam nesciunt laboriosam voluptatum, quisquam odio.</p>
     
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador não é compatível com iframe.</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis adipisci labore dolorem natus nesciunt enim repellendus, maiores tenetur, voluptas eius, aliquam numquam nulla dolore consequatur accusantium? Eum rem porro possimus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem necessitatibus, soluta quae animi quaerat perferendis id modi deleniti reiciendis recusandae eaque labore, officiis aliquam ullam nesciunt laboriosam voluptatum, quisquam odio.</p>
 </body>
