--- a/modulo1/desafios/d009/curso-html.html
+++ b/modulo1/desafios/d009/curso-html.html
@@ -12,6 +12,6 @@
     <h1>Curso de HTML5</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Ejkb_YpuHWs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p><a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dkZ9-atkcmcBaMZdmLHft8n" target="_blank" rel="external" id="button">Clique aqui para ver o curso completo</a></p>
-    <a href="index.html" rel="prev"><img src="imagens/voltar.png" alt="Voltar" type="voltar.png"></a>
+    <a href="index.html" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
 </html>
