--- a/modulo4/ex025/form005.html
+++ b/modulo4/ex025/form005.html
@@ -10,6 +10,14 @@
     <h1>Exemplo de Formulário</h1>
     <form action="cadastro.php" method="get">
         <fieldset>
+            <legend>Sexo</legend>
+            <input type="radio" name="masc" id="imasc">
+            <label for="imasc">Masculino</label><br>
+            <input type="radio" name="fem" id="ifem">
+            <label for="ifem">Feminino</label><br>
+        </fieldset>
+        <br>
+        <fieldset>
             <legend>Esportes favoritos</legend>
             <input type="checkbox" name="esbas" id="iesbas">
             <label for="iesbas">Basquete</label><br> 
