--- a/modulo4/ex026/mq001/index.html
+++ b/modulo4/ex026/mq001/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <!-- Chamdas de Media Query -->
+    <!-- Chamadas de Media Query -->
+    <!-- Media Query é formado por 'media types', que pode ser 'screen', 'print' e 'all', e 'media features' que são característcas de mídias -->
     <link rel="stylesheet" href="estilos/style.css" media="screen">
     <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
