--- a/modulo3/desafios/d011/index.html
+++ b/modulo3/desafios/d011/index.html
@@ -6,15 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astronauta</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
+            min-height: 100vh;
             background: black url(imagens/espaco.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
         div {
-            height: 96vh;
+            height: 100vh;
             background: url(imagens/astronauta.png) center center no-repeat;
-            background-size: 400px 400px;
         }
     </style>
 </head>
