--- a/modulo3/ex022/fundo007.html
+++ b/modulo3/ex022/fundo007.html
@@ -12,7 +12,7 @@
             background-color: purple;
             height: 96vh;
             padding: 10px;
-            position: relative; /* valor padrão da posição de uma caixa é 'relative' */
+            position: relative; /* valor padrão da posição de uma caixa é 'static' */
         }
 
         #conteudo {
