--- a/modulo3/desafios/d011/index.html
+++ b/modulo3/desafios/d011/index.html
@@ -19,8 +19,15 @@
         }
 
         div {
-            height: 100vh;
+            max-width: 50vw;
+            min-height: 50vh;
             background: url(imagens/astronauta.png) center center no-repeat;
+            background-size: contain;
+
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, 50%);
         }
     </style>
 </head>
