--- a/modulo3/desafios/d011/index.html
+++ b/modulo3/desafios/d011/index.html
@@ -16,18 +16,19 @@
             min-height: 100vh;
             background: black url(imagens/espaco.jpg) center center no-repeat fixed;
             background-size: cover;
+            position: relative;
         }
 
         div {
-            max-width: 50vw;
-            min-height: 50vh;
+            height: 50vh;
+            width: 50vw;
             background: url(imagens/astronauta.png) center center no-repeat;
             background-size: contain;
 
-            position: relative;
-            top: 50%;
+            position: absolute;
             left: 50%;
-            transform: translate(-50%, 50%);
+            top: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
