--- a/modulo4/desafios/d016/index.html
+++ b/modulo4/desafios/d016/index.html
@@ -24,13 +24,13 @@
                         <input type="email" name="login" id="ilogin" placeholder="E-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
                     </div>
-                    <div class="senha">
+                    <div class="campo">
                         <span class="material-symbols-outlined">vpn_key</span>
                         <input type="password" name="senha" id="isenha" placeholder="Senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">
+                    <a href="esqueci.html" class="botao">
                         Esqueci a senha <span class="material-symbols-outlined">mail</span>
                     </a>
                 </form>
